<resources>
    <!--天气 -->
    <string name="app_name">Weather</string>
    <string name="addcity">添加城市</string>
    <string name="inputcity">Input a city name or Pinyin</string>
    <string name="hotcity">热门城市</string>
    <string name="noAnyCity">"您当前还没有定位城市..."</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refreshed">已刷新...</string>
    <string name="netconnect">请连接网络!</string>

    <string name="cityName">无城市</string>
    <string name="weather">晴</string>
    <string name="weather_temp">N/V</string>
    <string name="weather_temp_cymbol">℃</string>


    <!--日历 -->
    <string name="pre">上</string>
    <string name="next">下</string>
    <string name="currentYM">"%1$s年 %2$s月"</string>


    <string-array name="head_week">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

</resources>
